# topicos_visao

./: .gitignore  Makefile  pyproject.toml  requirements.txt
artigo/: base.tex
notebooks/resultados_modelo/relatorios/: classification_report_comparativo.csv  classification_report_comparativo.txt  detalhamento_predicoes_v1_v2.csv  historico_evolucao_v1.csv  historico_evolucao_v2.csv
notebooks/resultados_modelo_multilabel/relatorios/: classification_report_comparativo.csv  classification_report_comparativo.txt  detalhamento_predicoes_v1_v2.csv  historico_evolucao_v1.csv  historico_evolucao_v2.csv
src/: config.py  data_preprocessing.py  dataset.py  evaluate.py  gradcam.py  main.py  models.py  plot_augmentation_steps.py  plot_classification_report.py  plot_comparativo_treinamento.py  plot_preprocessing_steps.py  regerar_graficos.py  replot_graphs.py  run_gradcam_categories.py  scratch_dataset_stats.py  train.py
