[project]
name = "topicos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "jupyter",
    "kaggle",
    "matplotlib",
    "numpy<2",
    "opencv-python",
    "pandas<2",
    "scikit-learn",
    "seaborn",
    "tensorflow==2.10.1",
    "tensorflow-io-gcs-filesystem<=0.31.0",
]
